--- a/xdpyinfo/Makefile.am
+++ b/xdpyinfo/Makefile.am
@@ -35,7 +35,11 @@ AM_CFLAGS = \
 	$(DPY_XCOMPOSITE_CFLAGS) \
 	$(DPY_XINERAMA_CFLAGS) \
 	$(DPY_DMX_CFLAGS) \
-	$(DPY_XTST_CFLAGS)
+	$(DPY_XTST_CFLAGS) \
+	-fPIE
+AM_LDFLAGS = \
+	$(XDPYINFO_LDFLAGS) \
+	-pie
 
 xdpyinfo_LDADD = \
 	$(XDPYINFO_LIBS) \
