--- a/xev/Makefile.am
+++ b/xev/Makefile.am
@@ -22,7 +22,8 @@
 SUBDIRS = man
 bin_PROGRAMS = xev
 
-AM_CFLAGS = $(CWARNFLAGS) $(XEV_CFLAGS)
+AM_CFLAGS = $(CWARNFLAGS) $(XEV_CFLAGS) -fPIE
+AM_LDFLAGS = $(XEV_LDFLAGS) -pie
 xev_LDADD = $(XEV_LIBS)
 
 xev_SOURCES =	\
