--- a/xlsatoms/Makefile.am
+++ b/xlsatoms/Makefile.am
@@ -22,7 +22,8 @@
 SUBDIRS = man
 bin_PROGRAMS = xlsatoms
 
-AM_CFLAGS = $(CWARNFLAGS) $(XLSATOMS_CFLAGS)
+AM_CFLAGS = $(CWARNFLAGS) $(XLSATOMS_CFLAGS) -fPIE
+AM_CFLAGS = $(XLSATOMS_LDFLAGS) -pie
 xlsatoms_LDADD = $(XLSATOMS_LIBS)
 
 xlsatoms_SOURCES =	\
