--- a/xlsclients/Makefile.am
+++ b/xlsclients/Makefile.am
@@ -22,7 +22,8 @@
 SUBDIRS = man
 bin_PROGRAMS = xlsclients
 
-AM_CFLAGS = $(CWARNFLAGS) $(XLSCLIENTS_CFLAGS)
+AM_CFLAGS = $(CWARNFLAGS) $(XLSCLIENTS_CFLAGS) -fPIE
+AM_LDFLAGS = $(XLSCLIENTS_LDFLAGS) -pie
 xlsclients_LDADD = $(XLSCLIENTS_LIBS) $(LIBOBJS)
 
 xlsclients_SOURCES =	\
