--- a/xlsfonts/Makefile.am
+++ b/xlsfonts/Makefile.am
@@ -21,7 +21,8 @@
 
 bin_PROGRAMS = xlsfonts
 
-AM_CFLAGS = $(XLSFONTS_CFLAGS) $(CWARNFLAGS)
+AM_CFLAGS = $(XLSFONTS_CFLAGS) $(CWARNFLAGS) -fPIE
+AM_LDFLAGS = $(XLSFONTS_LDFLAGS) -pie
 xlsfonts_LDADD = $(XLSFONTS_LIBS)
 
 xlsfonts_SOURCES =	\
