--- a/xprop/Makefile.am
+++ b/xprop/Makefile.am
@@ -22,7 +22,8 @@
 SUBDIRS = man
 bin_PROGRAMS = xprop
 
-AM_CFLAGS = $(CWARNFLAGS) $(XPROP_CFLAGS)
+AM_CFLAGS = $(CWARNFLAGS) $(XPROP_CFLAGS) -fPIE
+AM_LDFLAGS = $(XPROP_LDFLAGS) -pie
 xprop_LDADD = $(XPROP_LIBS)
 
 xprop_SOURCES =	\
