--- a/xwininfo/Makefile.am
+++ b/xwininfo/Makefile.am
@@ -22,7 +22,8 @@
 SUBDIRS = man
 bin_PROGRAMS = xwininfo
 
-AM_CFLAGS = $(CWARNFLAGS) $(XWININFO_CFLAGS)
+AM_CFLAGS = $(CWARNFLAGS) $(XWININFO_CFLAGS) -fPIE
+AM_LDFLAGS = $(XWININFO_LDFLAGS) -pie
 xwininfo_LDADD = $(XWININFO_LIBS) $(LIBOBJS)
 
 xwininfo_SOURCES =	\
